--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,36 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Desafio 11</title>
+
 </head>
 
-<body>
-    <h1>Usuarios Random</h1>
-    <table class="table">
-        <tr style="color: black">
-            <th>nombre</th>
-            <th>precio</th>
-            <th>imagen</th>
-        </tr>
-        <% users.forEach(user=>{ %>
-            <tr>
-                <td>
-                    <%=user.nombre %>
-                </td>
-                <td>
-                    <%=user.precio %>
-                </td>
-                <td>
-                    <img style="height: auto; width: 30%" src=<%=user.imagen%>
-                    alt="sskks" />
-                </td>
-            </tr>
-            <%})%>
-    </table>
 
+<body>
+    <h1>Hola</h1>
+
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
+
+    <script src="./main.js"></script>
 </body>
+
 
 </html>
